<resources>
    <string name="app_name">LearningAndroid</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="mail_fab_hint">An envelope indicating messaging or mail.</string>
    <string name="default_start_time">10</string>
    <string name="start">Start</string>
    <string name="increase">Increase</string>
    <string name="start_value_increment">0</string>
</resources>